# vibe-coding-screenshot-toolkit

./: .gitignore  CHANGELOG.md  COMMIT_MSG.tmp  Cargo.toml  INSTALLATION.md  LICENSE  Makefile  README.md  README.zh-CN.md  gemini_commit_msg.tmp
.github/: copilot-instructions.md
.github/prompts/: develop.prompt.md  update_doc.prompt.md
.github/workflows/: ci.yml
crates/api_cli/: Cargo.toml  README.md  README.zh-CN.md
crates/api_cli/src/: main.rs
crates/api_cli/tests/: basic_cli.rs  cli_seq.rs
crates/api_napi/: Cargo.toml
crates/api_napi/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  model.rs  naming.rs  snap.rs  undo.rs
crates/core/tests/: naming_seq_cross_day.rs
crates/infra/: Cargo.toml
crates/infra/src/: config.rs  event_bus.rs  id.rs  lib.rs  lru.rs  metrics.rs  naming.rs  panic_hook.rs  path_resolver.rs  runtime.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/ocr_adapter/: Cargo.toml
crates/ocr_adapter/src/: lib.rs
crates/platform_mac/: Cargo.toml
crates/platform_mac/src/: lib.rs
crates/platform_mac/tests/: region.rs
crates/platform_win/: Cargo.toml
crates/platform_win/src/: lib.rs
crates/privacy/: Cargo.toml
crates/privacy/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs
crates/services/tests/: mvp.rs
crates/ui_overlay/: Cargo.toml
crates/ui_overlay/examples/: test_metal_backend.rs
crates/ui_overlay/src/: coordinate_utils.rs  event_handler.rs  frame_timer.rs  iced_overlay.rs  image_cache.rs  lib.rs  native_enhanced.rs  renderer.rs  selection_app.rs  selection_render.rs  selection_state.rs  selector.rs  window_info.rs  window_manager.rs
crates/ui_overlay/src/backend/: cpu_backend.rs  factory.rs  metal_backend.rs  mod.rs
crates/ui_overlay/src/platform/: macos.rs  mod.rs  windows.rs
crates/ui_overlay/src/skia/: context.rs
docs/: README.md  ui_overlay_performance_optimization.md
docs/prd/: mvp.md  prd.md
docs/tech_design/: api_cli.md  api_napi.md  core.md  infra.md  macros.md  ocr_adapter.md  overview.md  platform_mac.md  platform_win.md  privacy.md  renderer.md  services.md  ui_overlay.md
docs/todo/: api_cli.md  api_napi.md  core.md  infra.md  macros.md  ocr_adapter.md  platform_mac.md  platform_win.md  privacy.md  renderer.md  services.md  ui_overlay.md
