[package]
name = "api_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features=["derive"] }
tracing = { workspace = true }
anyhow = { workspace = true }
screenshot_core = { path = "../core" }
services = { path = "../services" }
renderer = { path = "../renderer" }
infra = { path = "../infra" }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
platform_mac = { path = "../platform_mac", optional = true }
ui_overlay = { path = "../ui_overlay" }

[target.'cfg(target_os = "macos")'.dependencies]
platform_mac = { path = "../platform_mac" }

[dev-dependencies]
tempfile = "3"
