[package]
name = "screenshot_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
smallvec = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
once_cell = "1"
