[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
serde_json = "1"
once_cell = "1"
directories = "5"
