[package]
name = "platform_mac"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
screenshot_core = { path = "../core" }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
image = { version = "0.25", default-features = false, features=["png"] }
tempfile = "3"
xcap = { version = "0.3", default-features = false, features=["image"] }
services = { path = "../services" }
objc = "0.2.7"
cocoa = "0.25.0"
ui_overlay = { path = "../ui_overlay" }
infra = { path = "../infra" }
