[package]
name = "platform_mac"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
screenshot_core = { path = "../core" }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
image = { version = "0.25", default-features = false, features=["png"] }
tempfile = "3"
xcap = { version = "0.7.0", default-features = false, features=["image"] }
services = { path = "../services" }
objc2 = "0.6.2"
objc2-foundation = "0.3.1"
objc2-app-kit = "0.3.1"
ui_overlay = { path = "../ui_overlay" }
infra = { path = "../infra" }
