[package]
name = "ui_overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
winit = "0.30"
pixels = "0.15.0"

# macOS 依赖：用于窗口层级/行为控制（selector.rs 的 macOS 分支）
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.2"
objc2-foundation = "0.3.1"
objc2-app-kit = "0.3.1"
core-graphics = "0.24"

