[package]
name = "ui_overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
winit = "0.30"
image = { workspace = true }
softbuffer = "0.4.6"
raw-window-handle = "0.6"

# 默认使用工作区的 skia-safe 配置（GL + textlayout + svg）
skia-safe = { workspace = true }

# macOS 依赖：用于窗口层级/行为控制和 Metal GPU 渲染
[target.'cfg(target_os = "macos")'.dependencies]
# 在 macOS 上启用 Metal 特性
skia-safe = { version = "0.88", features = ["gl", "metal", "textlayout", "svg"] }

# Objective-C 运行时交互（平台集成）
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-quartz-core = "0.3.1"

# Metal GPU 渲染
metal = "0.29"
core-graphics-types = "0.1"

